--- a/lib/index.css
+++ b/lib/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@plugin "tailwindcss-animate";
+@import "tw-animate-css";
 @import "react-day-picker/style.css";
 
 @custom-variant dark (&:is(.dark *));
